# web-api

./: .gitignore  ARCHITECTURE.md  README.md  UPSTREAMS.md  findings.md  package.json  progress.md  pyproject.toml  task_plan.md
apps/: README.md
apps/control-workbench/: README.md  package.json
apps/private-worker/: README.md  package.json  server.mjs
consumers/: README.md
consumers/showcase-web/: README.md  package.json
consumers/telegram-canvas-bot/: README.md
consumers/telegram-gpt-image-bot/: README.md
ops/: README.md  image-model-index.md  provider-status.md
ops/browser-profiles/: gemini-canvas-profiles.md
ops/doctor/: README.md
ops/env/: README.md  common.env.example
ops/smoke/: README.md
ops/systemd/: README.md  genapi-control-sub2api.service.example  genapi-provider-canvas.service.example  genapi-provider-catgpt.service.example  genapi-provider-ds-free.service.example  genapi-provider-gpt-web.service.example  genapi-shim-catgpt-responses.service.example  genapi-shim-chat-responses.service.example  genapi-shim-ds-responses.service.example  genapi-shim-gpt-responses.service.example
providers/: README.md
providers/canvas-to-api/: .gitignore  README.md  package.json  runtime_status.mjs  start.mjs
providers/catgpt-gateway/: README.md  package.json
providers/ds-free-api/: .gitignore  README.md
providers/gemini-web/: README.md  package.json  runtime_status.mjs  start.mjs
providers/gemini-web/upstream/: pyproject.toml
providers/gemini-web/upstream/src/web_capability_api_gemini_web_runtime/: __init__.py  server.py
shims/: README.md
(+152 files in other folders)
